kubernetes/k8s/micro-curso-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-curso
  namespace: microservices-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-curso
  template:
    metadata:
      labels:
        app: micro-curso
    spec:
      containers:
      - name: micro-curso
        image: davidrouet/micro-cursos:latest
        ports:
        - containerPort: 8003
