kubernetes/k8s/micro-estudiante-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-estudiante
  namespace: microservices-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-estudiante
  template:
    metadata:
      labels:
        app: micro-estudiante
    spec:
      containers:
      - name: micro-estudiante
        image: davidrouet/micro-estudiantes:latest
        ports:
        - containerPort: 8002
