kubernetes/k8s/mysql-curso-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-curso
  namespace: microservices-app
spec:
  selector:
    matchLabels:
      app: mysql-curso
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-curso
    spec:
      containers:
      - image: mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-curso-persistent-storage
          mountPath: /var/lib/mysql
        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - -h
            - localhost
            - -u
            - root
            - -p${MYSQL_ROOT_PASSWORD}
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - -h
            - localhost
            - -u
            - root
            - -p${MYSQL_ROOT_PASSWORD}
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
      volumes:
      - name: mysql-curso-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-curso-pvc
