kubernetes/k8s/micro-curso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-cursos-app
  namespace: microservices-app
spec:
  selector:
    app: micro-curso
  ports:
  - port: 8003
    targetPort: 8003
  type: ClusterIP
