kubernetes/k8s/micro-estudiante-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-estudiante
  namespace: microservices-app
spec:
  selector:
    app: micro-estudiante
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
