kubernetes/k8s/microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-curso
  namespace: microservices-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-curso
  template:
    metadata:
      labels:
        app: micro-curso
    spec:
      containers:
      - name: micro-curso
        image: davidrouet/micro-cursos:latest
        ports:
        - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: micro-cursos-app
  namespace: microservices-app
spec:
  selector:
    app: micro-curso
  ports:
  - port: 8003
    targetPort: 8003
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-estudiante
  namespace: microservices-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-estudiante
  template:
    metadata:
      labels:
        app: micro-estudiante
    spec:
      containers:
      - name: micro-estudiante
        image: davidrouet/micro-estudiantes:latest
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: micro-estudiante
  namespace: microservices-app
spec:
  selector:
    app: micro-estudiante
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
