kubernetes/k8s/mysql-curso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-micro-curso
  namespace: microservices-app
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql-curso
  type: ClusterIP
