kubernetes/k8s/mysql-estudiante-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-micro-estudiante
  namespace: microservices-app
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql-estudiante
  type: ClusterIP
